# notion-md-sync

./: Cargo.toml  LICENSE  README.md
src/: conf.rs  main.rs  push_to_notion.rs
src/notionlib/: get_or_create_database.rs  mod.rs  push_to_notion.rs
