[package]
name = "notion-md-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "6.0.1", features = ["serde"] }
log = "0.4.20"
notion = "0.5.1"
reqwest = "0.11.22"
regex = "1.10.2"
futures = "0.3.28"
tokio = "1.33.0"
